# RayTracing

./: CMakeLists.txt  README.txt
libraries/boost/: CMakeLists.txt
src/: basic_types.hpp  bsp.hpp  camera.cpp  camera.hpp  geometry.hpp  image.cpp  image.hpp  index_types.hpp  light.hpp  main.cpp  material.hpp  mesh.cpp  mesh.hpp  ray.cpp  ray.hpp  render.cpp  render.hpp  scene.cpp  scene.hpp  span.hpp  span.tpp  utility.hpp
src/utility/: index_iterator.hpp  math.hpp  misc.hpp  numeric.hpp  permutation_iterator.hpp  permuted_span.hpp  random.hpp  span.hpp  time.hpp  vector.hpp  vectorised.hpp
